--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "uuid": "^9.0.1",
     "vite": "^5.1.1",
     "vue": "^3.4.18",
     "vue-router": "4"
